crates/mel-cli/src/snapshots/mel_inspect__tests__lexer_unterminated_string.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1087
expression: "render_snapshot(\"lexer/strings/unterminated-string.mel\",\ninclude_str!(\"../../../tests/corpus/lexer/strings/unterminated-string.mel\"),)"
---
source: lexer/strings/unterminated-string.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 1
parse errors: 1
semantic diagnostics: 0
[31mError:[0m lex: unterminated string literal
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m lexer/strings/unterminated-string.mel:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [34m"[0m[34mu[0m[34mn[0m[34mt[0m[34me[0m[34mr[0m[34mm[0m[34mi[0m[34mn[0m[34ma[0m[34mt[0m[34me[0m[34md[0m
 [38;5;240m  │[0m [34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m┬[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m  
 [38;5;240m  │[0m        [34m╰[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m unterminated string literal
[38;5;246m───╯[0m
[31mError:[0m parse: expected ';' after statement
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m lexer/strings/unterminated-string.mel:1:2 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m 
 [38;5;240m  │[0m  [31m│[0m 
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m expected ';' after statement
[38;5;246m───╯[0m
