crates/mel-cli/src/snapshots/mel_inspect__tests__sema_anim_layer_target.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/anim-layer-target.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/anim-layer-target.mel\"),)"
---
source: sema/command-schema/anim-layer-target.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
