crates/mel-cli/src/snapshots/mel_inspect__tests__sema_attribute_exists_two_args.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/attribute-exists-two-args.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/attribute-exists-two-args.mel\"),)"
---
source: sema/command-schema/attribute-exists-two-args.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
