crates/mel-cli/src/snapshots/mel_inspect__tests__sema_boolean_alias_return.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1265
expression: "render_snapshot(\"sema/proc/boolean-alias-return.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/boolean-alias-return.mel\"),)"
---
source: sema/proc/boolean-alias-return.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
