crates/mel-cli/src/snapshots/mel_inspect__tests__sema_delete_selection_omission.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/delete-selection-omission.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/delete-selection-omission.mel\"),)"
---
source: sema/command-schema/delete-selection-omission.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
