crates/mel-cli/src/snapshots/mel_inspect__tests__sema_filter_expand_explicit_list.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/filter-expand-explicit-list.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/filter-expand-explicit-list.mel\"),)"
---
source: sema/command-schema/filter-expand-explicit-list.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
