crates/mel-cli/src/snapshots/mel_inspect__tests__sema_list_transforms_single_arg.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/list-transforms-single-arg.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/list-transforms-single-arg.mel\"),)"
---
source: sema/command-schema/list-transforms-single-arg.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
